boost (1.33.0-4) unstable; urgency=low

  * debian/control: renamed DSO packages to '*c2a'.  Closes: #339154.

 -- Domenico Andreoli <cavok@debian.org>  Sat, 19 Nov 2005 15:55:50 +0100

boost (1.33.0-3) unstable; urgency=low

  * debian/documentation-files: regenerate.

  * Applied patch from 1.33.1 to unbreak ublas.

  * Applied patch from 1.33.1 to unbreak is_incrementable with g++ 4.0.2.

  * Applied patch to remove warnings when compiling ublas with -Wall,
    patch sent upstream.

  * Single-threaded libraries are provided as well, thanks to Waba.
    Closes: #335594.

  * hppa and m68k build with gcc 3.4.  Closes: #319232, #334959.

 -- Domenico Andreoli <cavok@debian.org>  Thu,  3 Nov 2005 13:11:05 +0100

boost (1.33.0-2) unstable; urgency=low

  * The Debian Boost Team now maintains the package.

  * Added packages for Boost.Iostreams and Boost.Wave libraries.
    Closes: #324833.

  * Added package for bcp utility.  Closes: #333530.

  * boost/tuple/detail/tuple_basic.hpp: removed name of unused parameter.
    Closes: #327167.

  * debian/rules: enabled UNICODE support for Boost.Regex.  Closes: #333703.

 -- Domenico Andreoli <cavok@debian.org>  Tue, 18 Oct 2005 18:21:25 +0200

boost (1.33.0-1) unstable; urgency=low

  * New usptream version.  Closes: #322674.

  * debian/rules: static library of program_options is now distributed.
    Closes: #320973, #322269.

  * boost/graph/adjacency_list.hpp: fixed compiler warnings.
    Closes: #322386.

  * debian/documentation-files: updated.  Closes: #322579.

  * Fixed FTBFS on GNU/kFreeBSD.  Closes: #320677.

 -- Domenico Andreoli <cavok@debian.org>  Fri, 12 Aug 2005 12:37:35 +0200

boost (1.32.0+1.33.0-cvs20050727-1) unstable; urgency=low

  * Updated the snapshot version.  Closes: #319966.

  * Fixed shlibs version.

 -- Domenico Andreoli <cavok@debian.org>  Wed, 27 Jul 2005 23:06:27 +0200

boost (1.32.0+1.33.0-cvs20050720-3) unstable; urgency=low

  * Added build dependency on zlib1g-dev.
